# question_generation

./: .gitignore  claude.md  pyproject.toml
api/: deps.py  main.py  schemas.py
api/routers/: documents.py  evaluations.py  experiments.py  questions.py  reviews.py
app/: main.py
app/components/: evaluation_card.py  question_card.py
app/pages/: 1_generate.py  2_questions.py  3_evaluate.py  4_review.py  5_documents.py  6_experiments.py
config/: secrets.example.toml  secrets.py  settings.py
core/: enums.py  models.py  rubric.py
db/: connection.py  schema.sql
db/repositories/: documents_repo.py  evaluations_repo.py  experiments_repo.py  metadata_repo.py  questions_repo.py  reviews_repo.py
docs/: BUILD_GUIDE.md  DECISIONS.md  DEPLOYMENT.md  ROADMAP.md  SYSTEM_DESIGN.md  TECH_ARCHITECTURE.md  TECH_DECISIONS.md
embeddings/: base.py  cohere_provider.py  registry.py
llm/: base.py  groq_provider.py  registry.py
metadata/: logger.py  models.py
prompts/: fill_blank_grounded_v1.txt  fill_blank_v1.txt  judge_fill_blank_v1.txt  judge_mcq_v1.txt  judge_true_false_v1.txt  mcq_grounded_v1.txt  mcq_v1.txt  mcq_v2.txt  true_false_grounded_v1.txt  true_false_v1.txt
rag/: chunking.py  grounding.py  retrieval.py  vector_store.py
services/: dedup.py  evaluation.py  experiment.py  generation.py  ingestion.py  review.py
tests/: conftest.py  factories.py
tests/api/: conftest.py  test_documents_router.py  test_evaluations_router.py  test_experiments_router.py  test_questions_router.py  test_reviews_router.py
tests/app/: test_documents_page.py  test_evaluate_page.py  (+5 more)
(+24 files in other folders)
