[project]
name = "question-intelligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.8"
dependencies = [
    "pydantic>=2.9",
    "groq>=0.11",
    "streamlit>=1.59.2",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "cohere>=5.0",
    "chromadb>=0.5",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
